<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/jStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    tools:context="controller.TrapecioActivity">

    <ImageView
        android:id="@+id/imgTrapecio"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/trapecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trapecio" />

    <EditText
        android:id="@+id/txtBase"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dTop"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/base"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTrapecio" />

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dTop"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBase" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dTop"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResultado" />

    <TextView
        android:id="@+id/txtViewResultado"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/resultado"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAltura" />

</androidx.constraintlayout.widget.ConstraintLayout>