<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/jStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/morado"
    tools:context="controller.CirculoActivity">

    <ImageView
        android:id="@+id/imgCirculo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/circulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circulo" />

    <EditText
        android:id="@+id/txtRadio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dTop"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/radio"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCirculo" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dTop"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResultado" />

    <TextView
        android:id="@+id/txtViewResultado"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dTop"
        android:hint="@string/resultado"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRadio" />

</androidx.constraintlayout.widget.ConstraintLayout>