<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5A4A4"
    tools:context="controller.MainActivity">

    <ImageButton
        android:id="@+id/imgButtonHexagono"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/hexagono"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonCirculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hexagono" />

    <ImageButton
        android:id="@+id/imgButtonCirculo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/circulo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonRectangulo"
        app:layout_constraintStart_toEndOf="@+id/imgButtonHexagono"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circulo" />

    <ImageButton
        android:id="@+id/imgButtonRectangulo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/rectangulo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgButtonCirculo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangulo" />

    <ImageButton
        android:id="@+id/imgButtonTrapecio"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/trapecio"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonTriangulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgButtonHexagono"
        app:srcCompat="@drawable/trapecio" />

    <ImageButton
        android:id="@+id/imgButtonTriangulo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/triangulo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonPentagono"
        app:layout_constraintStart_toEndOf="@+id/imgButtonTrapecio"
        app:layout_constraintTop_toBottomOf="@+id/imgButtonCirculo"
        app:srcCompat="@drawable/triangulo" />

    <ImageButton
        android:id="@+id/imgButtonPentagono"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/pentagono"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgButtonTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/imgButtonRectangulo"
        app:srcCompat="@drawable/pentagono" />
</androidx.constraintlayout.widget.ConstraintLayout>